Make the Spider solver check all cards are face up before moving runs.

This was simply a missing check.

BUG:265857

svn path=/trunk/KDE/kdegames/kpat/; revision=1228140